@@ -1,3 +1,9 @@
+2011-08-22  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
+
+	* Add FiltersToolbox/scinrrd_crop.m (v0.0.1):
+
+	- Crop an SCI NRRD image or segmentation volume.
+
 2011-08-21  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
 	* FiltersToolbox/skeleton_label.m:
